# meshflow

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.ai/: OVERALL_DESIGN.md
.ai/plans/: 2026-03-21-expansion-pass-refactor.md  2026-03-24-num-positions-refactor.md  2026-03-25-broadcast-messaging.md
.ai/specs/: MILESTONE_1.md  MILESTONE_10.md  MILESTONE_11.md  MILESTONE_12.md  MILESTONE_2.md  MILESTONE_3.md  MILESTONE_4.md  MILESTONE_5.md  MILESTONE_6.md  MILESTONE_7.md  MILESTONE_8.md  MILESTONE_9.md
.claude/: settings.json
artifacts/benchmarks/: benchmark_log.jsonl
crates/mesh_runtime/: Cargo.toml
crates/mesh_runtime/src/: bridge.rs  compiler_test_helpers.rs  coords.rs  event.rs  lib.rs  mesh.rs  message.rs  pe.rs  profiling.rs  program.rs  route.rs  runtime.rs
python/meshflow/: __init__.py  _mesh_runtime.pyi
python/meshflow/api/: schemas.py  server.py  store.py
python/meshflow/compiler/: __init__.py  artifact.py  config.py  expanded_ir.py  graph_ir.py  schedule_ir.py  spatial_ir.py
python/meshflow/models/: mlp.py  reference.py  transformer.py
python/meshflow/tools/: inspect_artifact.py
python/meshflow/viz/: __init__.py  contention.py  dump.py  heatmap.py  latency.py  queue.py  sram.py  timeline.py
scripts/: benchmark.py  dev.sh  lint.sh  test.sh
tests/python/: test_artifact.py  test_compiler_passes.py  test_end_to_end.py  test_graph_ir.py  test_import.py  test_mesh_bridge.py
tests/python/api/: test_api.py  test_store.py
tests/python/compiler/: test_artifact.py  test_compile.py  test_expanded_ir.py  test_graph_ir.py
(+21 files in other folders)
